@@ -1,3 +1,12 @@
+2009-06-01  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by Dave Hyatt.
+
+        Fix Chromium build by adding an #ifdef.
+
+        * platform/mac/ScrollbarThemeMac.mm:
+        (WebCore::ScrollbarThemeMac::paint): Added an #ifdef.
+
 2009-06-01  Dirk Schulze  <krit@webkit.org>
 
         Reviewed by Nikolas Zimmermann.
